--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-  <title>Insomnia Tips</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/main.css">
+  <title>Insomnia tips</title>
+</head>
+<body>
   
-	<link rel="stylesheet" href="assets/css/main.css">
+</body>
+</html>
+  
+	
 </head>
 <body>
   
