Add partial labels in index

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -7,7 +7,9 @@
   <title>Insomnia tips</title>
 </head>
 <body>
-  
+  <partial src="_blog.html"></partial>
+  <partial src="_grid-section.html"></partial>
+  <partial src="_footer.html"></partial>
 </body>
 </html>
   
