--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -7,6 +7,10 @@
   <title>Insomnia tips</title>
 </head>
 <body>
+  <header class="hero" role="heading">
+    <h1>Anonymous Proxy</h1>
+    <h2>In hac habitasse platea dictumst.</h2>
+  </header>
   <partial src="_blog.html"></partial>
   <partial src="_grid-section.html"></partial>
   <partial src="_footer.html"></partial>
