--- a/_src/templates/partials/_blog.html
+++ b/_src/templates/partials/_blog.html
@@ -1,1 +1,6 @@
-<h1>Miau</h1>
+<div class="blog__container">
+    <p class="blog__topic">Insomnia Tips</p>
+    <h3>Looking through a window</h3>
+    <p class="blog__abstract">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
+    <button type="button" class="blog-article__link"><a href="#" target="#"></a></button>
+</div>
