Add grid section

--- a/_src/templates/partials/_grid-section.html
+++ b/_src/templates/partials/_grid-section.html
@@ -1,1 +1,18 @@
-<h1>Pío pío</h1>
+<div class="grid__container">
+    <div class="grid__title">
+        <h3>3 reasons to purchase</h3>
+    </div>
+    <div class="grid__card">
+        <h4 class="grid__card--title">Ut sed metus</h4>
+        <p class="grid__card--title">Lorem ipsum dolor sit amet, consecteur.</p>
+    </div>
+    <div class="grid__card">
+        <h4 class="grid__card--title">Curabitur ac erat</h4>
+        <p class="grid__card--title">Mauris mattis urna quis lorem molestie.</p>
+    </div>
+    <div class="grid__card">
+        <h4 class="grid__card--title">Morbi dictum</h4>
+        <p class="grid__card--title">Aliquam in dolor et dolor tincidunt.</p>
+    </div>
+    <button class="grid__button" type="button"><a href="#">More reasons</a></div>
+</div>
