Add main section to index

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -11,16 +11,10 @@
     <h1>Anonymous Proxy</h1>
     <h2>In hac habitasse platea dictumst.</h2>
   </header>
-  <partial src="_blog.html"></partial>
-  <partial src="_grid-section.html"></partial>
-  <partial src="_footer.html"></partial>
-</body>
-</html>
-  
-	
-</head>
-<body>
-  
-  </div>
+  <main>
+    <partial src="_blog.html"></partial>
+    <partial src="_grid-section.html"></partial>
+    <partial src="_footer.html"></partial>
+  </main>
 </body>
 </html>
