Add style variables

--- a/_src/assets/scss/core/_variables.scss
+++ b/_src/assets/scss/core/_variables.scss
@@ -1,1 +1,12 @@
-$color-white: #f3f4f5;
+
+// COLORS
+$color_lightblue: #8ccbea;
+$color_black: black;
+$bright_orange:#f26002;
+$color_cerulean:#0271bc;
+$color_ice-blue: #eff9ff;
+$color_whiteSnow:#fff;
+
+//FONTS
+$ff_title:'Roboto Slab', serif;
+$ff-text: 'Roboto', sans-serif;
