--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
   <title>Insomnia tips</title>
 </head>
