Create hero in layout

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
-  <title>Insomnia tips</title>
+  <title>Anonimous Proxy</title>
 </head>
 <body>
   <header class="hero" role="heading">
-    <h1>Anonymous Proxy</h1>
-    <h2>In hac habitasse platea dictumst.</h2>
+    <h1 class="main-title">Anonymous Proxy</h1>
+    <h2 class="title__comment">In hac habitasse platea dictumst.</h2>
   </header>
   <main>
     <partial src="_blog.html"></partial>
