Add styles to hero

--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,2 +1,14 @@
+
+//CORE
 @import 'core/variables';
+@import 'core/mixins';
+
+//LAYOUTS
 @import 'layout/hero';
+
+
+//COMPONENTS
+
+
+//PAGES
+@import 'pages/home'
