--- a/_src/assets/scss/layout/_hero.scss
+++ b/_src/assets/scss/layout/_hero.scss
@@ -1,10 +1,34 @@
-.hero{
-    background-image: url(images/cover.jpg);
+.hero {
+    height: 520px;
+    width: 100%;
+    background: url(../images/cover.jpg) no-repeat center center fixed;
+    background-size: cover;
     position:relative;
-    &:h1{
-        color:$color_whiteSnow;
-    }
-    &:h2{
-        color:$color_whiteSnow;
-    }
+    display:flex;
+    flex-direction: column;
+    justify-content: center;    
 }
+
+
+.main-title {
+    color:$color_whiteSnow;
+    text-transform:uppercase;
+    text-align: center;
+    font-family: $ff-title;
+    font-size: 42px;
+    line-height: 55px;
+    margin-top: 280px;
+    margin-bottom:10px;
+    font-weight: 700;
+    max-width: 300px;        
+}
+.title__comment{
+    color:$color_whiteSnow;
+    font-family: $ff-text;
+    text-align: center;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 21px;
+    font-weight: 400;
+}
+  
