--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -8,9 +8,14 @@
   <title>Anonimous Proxy</title>
 </head>
 <body>
-  <header class="hero" role="heading">
-    <h1 class="main-title">Anonymous Proxy</h1>
-    <h2 class="title__comment">In hac habitasse platea dictumst.</h2>
+  <header class="header__container" role="heading">
+    <div class="hero__image">
+      
+      <h1 class="main-title">Anonymous Proxy</h1>
+      
+      <h2 class="title__comment">In hac habitasse platea dictumst.</h2>
+
+    </div>
   </header>
   <main>
     <partial src="_blog.html"></partial>
