Add styles for blog section

--- a/_src/assets/scss/core/_variables.scss
+++ b/_src/assets/scss/core/_variables.scss
@@ -2,10 +2,11 @@
 // COLORS
 $color_lightblue: #8ccbea;
 $color_black: black;
-$bright_orange:#f26002;
+$color_bright-orange:#f26002;
 $color_cerulean:#0271bc;
 $color_ice-blue: #eff9ff;
 $color_whiteSnow:#fff;
+$color_greyish-brown: #4a4a4a;
 
 //FONTS
 $ff_title:'Roboto Slab', serif;
