--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -5,10 +5,11 @@
 
 //LAYOUTS
 @import 'layout/hero';
+@import 'layout/blog';
 
 
 //COMPONENTS
-
+@import 'components/buttons';
 
 //PAGES
 @import 'pages/home'
