--- a/_src/assets/scss/layout/_blog.scss
+++ b/_src/assets/scss/layout/_blog.scss
@@ -3,14 +3,14 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin:10px 0;
+    margin:30px 0;
     width:100vw;
 
     .blog__topic{
         color:$color_lightblue;
         font-family:$ff-text;
         font-size: 14px;
-        padding: 14px 0;
+        margin-bottom: 15px;
     }
     .blog__title{
         color:$color_black;
