--- a/_src/templates/partials/_grid-section.html
+++ b/_src/templates/partials/_grid-section.html
@@ -1,18 +1,20 @@
 <div class="grid__container">
-    <div class="grid__title">
-        <h3>3 reasons to purchase</h3>
-    </div>
+    
+    <h3 class="grid__title">3 reasons to purchase</h3>
+    
     <div class="grid__card">
         <h4 class="grid__card--title">Ut sed metus</h4>
-        <p class="grid__card--title">Lorem ipsum dolor sit amet, consecteur.</p>
+        <p class="grid__card--text">Lorem ipsum dolor sit amet, consecteur.</p>
     </div>
     <div class="grid__card">
         <h4 class="grid__card--title">Curabitur ac erat</h4>
-        <p class="grid__card--title">Mauris mattis urna quis lorem molestie.</p>
+        <p class="grid__card--text">Mauris mattis urna quis lorem molestie.</p>
     </div>
     <div class="grid__card">
         <h4 class="grid__card--title">Morbi dictum</h4>
-        <p class="grid__card--title">Aliquam in dolor et dolor tincidunt.</p>
+        <p class="grid__card--text">Aliquam in dolor et dolor tincidunt.</p>
     </div>
-    <button class="grid__button" type="button"><a href="#">More reasons</a></div>
+    <div class="grid__card">
+        <button class="grid__button" type="button"><a href="#">More reasons</a>
+    </div>
 </div>
