--- a/_src/assets/scss/layout/_grid.scss
+++ b/_src/assets/scss/layout/_grid.scss
@@ -10,6 +10,7 @@
         font-size: 24px;
         font-weight: bold;
         text-align: center;
+        margin: 30px 0;
     }
 
     .grid__card{
@@ -17,19 +18,19 @@
         flex-direction: column;
         align-items: center;
         color:$color_black;
-        margin: 0 70px;
+        margin: 0 70px 45px;
         
         .grid__card--title{
             font-family:$ff-title;
-            
+            line-height: 30px; 
+            font-size: 18px;
+            font-weight:bold;           
         }
         .grid__card--text{
             font-family: $ff-text;
             text-align: center;
-
+            font-size:18px;
+            line-height: 30px;
         }
-
-
-    }
-    
+    }    
 }
