--- a/_src/assets/scss/core/_variables.scss
+++ b/_src/assets/scss/core/_variables.scss
@@ -7,6 +7,9 @@ $color_cerulean:#0271bc;
 $color_ice-blue: #eff9ff;
 $color_whiteSnow:#fff;
 $color_greyish-brown: #4a4a4a;
+$color_plumberBlue: #304268;
+
+
 
 //FONTS
 $ff_title:'Roboto Slab', serif;
