--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -7,7 +7,7 @@
 @import 'layout/hero';
 @import 'layout/blog';
 @import 'layout/grid';
-
+@import 'layout/footer';
 
 //COMPONENTS
 @import 'components/buttons';
