--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,18 +1,18 @@
 <div class="footer__container">
     <ul class="footer__nav">
-        <li class="footer__nav--link"><a href="#">Article</a></li>
-        <li class="footer__nav--link"><a href="#">Books</a></li>
-        <li class="footer__nav--link"><a href="#">Events</a></li>
-        <li class="footer__nav--link"><a href="#">Reasons</a></li>
-        <li class="footer__nav--link"><a href="#">Tips</a></li>
+        <li class="footer__link"><a href="#">Article</a></li>
+        <li class="footer__link"><a href="#">Books</a></li>
+        <li class="footer__link"><a href="#">Events</a></li>
+        <li class="footer__link"><a href="#">Reasons</a></li>
+        <li class="footer__link"><a href="#">Tips</a></li>
     </ul>
     <ul class="footer__social">
-        <li class="footer__social--link"><a href="#">Twitter</a></li>
-        <li class="footer__social--link"><a href="#">Instagram</a></li>
-        <li class="footer__social--link"><a href="#">Mastodon.social</a></li>
+        <li class="footer__link"><a href="#">Twitter</a></li>
+        <li class="footer__link"><a href="#">Instagram</a></li>
+        <li class="footer__link"><a href="#">Mastodon.social</a></li>
     </ul>
     <div class="footer__copyright">
         <small>© 2017</small>
-        <small>We &hearts; components</small>
+        <small>We <sup class="heart">&hearts;</sup> components</small>
     </div>
 </div>
