Fix x-scroll and delete docs

--- a/_src/assets/scss/layout/_grid.scss
+++ b/_src/assets/scss/layout/_grid.scss
@@ -1,5 +1,6 @@
 .grid__container{
-    width:100vw;
+    width:100%;
+    overflow-x: hidden;
     background-color: $color_ice-blue;
     display:grid;
     grid-template-columns: 1fr;
