--- a/_src/assets/scss/layout/_blog.scss
+++ b/_src/assets/scss/layout/_blog.scss
@@ -4,7 +4,8 @@
     flex-direction: column;
     align-items: flex-start;
     margin:30px 0;
-    width:100vw;
+    width:100%;
+    
 
     .blog__topic{
         color:$color_lightblue;
