--- a/_src/assets/scss/layout/_footer.scss
+++ b/_src/assets/scss/layout/_footer.scss
@@ -3,6 +3,8 @@
     display:flex;
     flex-direction:column;
     align-items:center;
+    width:100%;
+    
     .footer__nav{
         @include resetList-styles ();
         margin: 60px 0 30px;
