Add scroll buttons

--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,4 +1,5 @@
 <div class="footer__container">
+    <button class="link-to-top" type="button"><a href="#top"><img src="../assets/images/ico-arrow.svg" alt="arrow-top"></a></button>
     <ul class="footer__nav">
         <li class="footer__link"><a href="#">Article</a></li>
         <li class="footer__link"><a href="#">Books</a></li>
