--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -8,12 +8,15 @@
   <title>Anonimous Proxy</title>
 </head>
 <body>
-  <header class="header__container" role="heading">
+  <header class="header__container" id="#top"role="heading">
     <div class="hero__image">
       
       <h1 class="main-title">Anonymous Proxy</h1>
       
       <h2 class="title__comment">In hac habitasse platea dictumst.</h2>
+      <button class="scroll--down" type="button">
+        <a href="#blog"><img src="../assets/images/ico-scroll-down.svg" alt="scroll-down"></a>
+      </button>
 
     </div>
   </header>
