--- a/_src/templates/partials/_blog.html
+++ b/_src/templates/partials/_blog.html
@@ -1,4 +1,4 @@
-<div class="blog__container">
+<div class="blog__container" id="#blog">
     <p class="blog__topic">Insomnia Tips</p>
     <h3 class="blog__title">Looking through a window</h3>
     <p class="blog__abstract">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
