Add hamburger button

--- a/_src/assets/scss/components/_buttons.scss
+++ b/_src/assets/scss/components/_buttons.scss
@@ -62,3 +62,9 @@
         }
     }
 }
+.menu-button{
+    background-color: $color_cerulean;
+    height: 45px;
+    width:45px;
+    border: 1px solid $color_cerulean;
+}
