--- a/_src/assets/scss/layout/_hero.scss
+++ b/_src/assets/scss/layout/_hero.scss
@@ -5,7 +5,10 @@
     background-size: cover;
     display:flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
+    position:relative;
+    top:-45px;
+    z-index: 0;
 }
 .main-title {
     color:$color_whiteSnow;
