Complete mobile version

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -8,13 +8,13 @@
   <title>Anonimous Proxy</title>
 </head>
 <body>
-  <header class="header__container" id="#top"role="heading">
+  <header class="header__container" id="top"role="heading">
     <nav class="nav__menu-container">
        <button class="menu-button">
           <img src="../assets/images/ico-menu.svg" alt="menu-icon">
         </button>
     </nav>
-    
+
     <div class="hero__image">
       
       <h1 class="main-title">Anonymous Proxy</h1>
