--- a/_src/assets/scss/layout/_hero.scss
+++ b/_src/assets/scss/layout/_hero.scss
@@ -1,15 +1,23 @@
+.header__container{
+    width:100%;
+    position:absolute;
+    top:0;
+    .menu-button{
+        position:fixed;
+        z-index: 5;
+    }
+}
+
 .hero__image {
     height: 568px;
-    width: 100%;
-    background: url(../images/cover.jpg) no-repeat center center;
+    background: url(../images/cover.jpg) no-repeat center 0;
     background-size: cover;
     display:flex;
     flex-direction: column;
     align-items: center;
-    position:relative;
     top:-45px;
-    z-index: 0;
 }
+
 .main-title {
     color:$color_whiteSnow;
     text-transform:uppercase;
@@ -20,7 +28,6 @@
     margin-top: 280px;
     margin-bottom:10px;
     font-weight: 700;
-    
 }
 .title__comment{
     color:$color_whiteSnow;
