Fix unintended overlapping

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -11,7 +11,7 @@
   <header class="header__container" id="top"role="heading">
     <nav class="nav__menu-container">
        <button class="menu-button">
-          <img src="../assets/images/ico-menu.svg" alt="menu-icon">
+          <img src="assets/images/ico-menu.svg" alt="menu-icon">
         </button>
     </nav>
 
@@ -21,7 +21,7 @@
       
       <h2 class="title__comment">In hac habitasse platea dictumst.</h2>
       <button class="scroll--down" type="button">
-      <a href="#blog"><img src="../assets/images/ico-scroll-down.svg" alt="scroll-down"></a>
+      <a href="#blog"><img src="assets/images/ico-scroll-down.svg" alt="scroll-down"></a>
       </button>
 
     </div>
