Add tablet responsive

--- a/_src/assets/scss/layout/_grid.scss
+++ b/_src/assets/scss/layout/_grid.scss
@@ -33,5 +33,12 @@
             font-size:18px;
             line-height: 30px;
         }
+    }
+    .grid__card--button{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        color:$color_black;
+        margin: 0 70px 45px;
     }    
 }
