--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -8,6 +8,7 @@
 @import 'layout/blog';
 @import 'layout/grid';
 @import 'layout/footer';
+@import 'layout/mqueries';
 
 //COMPONENTS
 @import 'components/buttons';
