--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,19 +1,21 @@
 <div class="footer__container">
     <button class="link-to-top" type="button"><a href="#top"><img src="assets/images/ico-arrow.svg" alt="arrow-top"></a></button>
-    <ul class="footer__nav">
-        <li class="footer__link"><a href="#">Article</a></li>
-        <li class="footer__link"><a href="#">Books</a></li>
-        <li class="footer__link"><a href="#">Events</a></li>
-        <li class="footer__link"><a href="#">Reasons</a></li>
-        <li class="footer__link"><a href="#">Tips</a></li>
-    </ul>
-    <ul class="footer__social">
-        <li class="footer__link"><a href="#">Twitter</a></li>
-        <li class="footer__link"><a href="#">Instagram</a></li>
-        <li class="footer__link"><a href="#">Mastodon.social</a></li>
-    </ul>
-    <div class="footer__copyright">
-        <small>© 2017</small>
-        <small>We <sup class="heart">&hearts;</sup> components</small>
+    <div class="footer__wrapper">
+        <ul class="footer__nav">
+            <li class="footer__link"><a href="#">Article</a></li>
+            <li class="footer__link"><a href="#">Books</a></li>
+            <li class="footer__link"><a href="#">Events</a></li>
+            <li class="footer__link"><a href="#">Reasons</a></li>
+            <li class="footer__link"><a href="#">Tips</a></li>
+        </ul>
+        <ul class="footer__social">
+            <li class="footer__link"><a href="#">Twitter</a></li>
+            <li class="footer__link"><a href="#">Instagram</a></li>
+            <li class="footer__link"><a href="#">Mastodon.social</a></li>
+        </ul>
+        <div class="footer__copyright">
+            <small>© 2017</small>
+            <small>We <sup class="heart">&hearts;</sup> components</small>
+        </div>
     </div>
 </div>
