--- a/_src/templates/partials/_grid-section.html
+++ b/_src/templates/partials/_grid-section.html
@@ -14,7 +14,7 @@
         <h4 class="grid__card--title">Morbi dictum</h4>
         <p class="grid__card--text">Aliquam in dolor et dolor tincidunt.</p>
     </div>
-    <div class="grid__card">
+    <div class="grid__card--button">
         <button class="grid__button" type="button"><a href="#">More reasons</a>
     </div>
 </div>
