--- a/_src/assets/scss/layout/_blog.scss
+++ b/_src/assets/scss/layout/_blog.scss
@@ -1,10 +1,11 @@
 .blog__container{
-    padding: 0 15px 45px;
+    padding: 0 15px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin:30px 0;
+    margin:30px 0 45px;
     width:100%;
+    overflow-x:hidden;
     
 
     .blog__topic{
