--- a/_src/assets/scss/layout/_mqueries-tablet.scss
+++ b/_src/assets/scss/layout/_mqueries-tablet.scss
@@ -58,7 +58,7 @@
             flex-direction: row;
             height: 240px;
             margin-top: 45px;
-                        
+                                    
             
             .footer__nav{
                 width:210px;
@@ -80,6 +80,7 @@
                 display:flex;
                 flex-direction: column;
                 align-items: flex-start;
+                order: -1;
             }
             
         }
