--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -8,7 +8,8 @@
 @import 'layout/blog';
 @import 'layout/grid';
 @import 'layout/footer';
-@import 'layout/mqueries';
+@import 'layout/mqueries-tablet';
+@import 'layout/mqueries-desktop';
 
 //COMPONENTS
 @import 'components/buttons';
