--- a/_src/assets/scss/layout/_footer.scss
+++ b/_src/assets/scss/layout/_footer.scss
@@ -4,6 +4,10 @@
     flex-direction:column;
     align-items:center;
     width:100%;
+    .link-to-top{
+        position:relative;
+        z-index: 1;
+    }
     
     .footer__nav{
         @include resetList-styles ();
