--- a/_src/assets/scss/layout/_mqueries-desktop.scss
+++ b/_src/assets/scss/layout/_mqueries-desktop.scss
@@ -16,10 +16,14 @@
 
     //GRID
 
-    .grid__container{
-        padding: 0 65px;
-        .grid__card{
-            max-width: 350px;
+    .grid-section__container{
+        background-color:$color_ice-blue;
+        .grid__container{
+            padding: 0 65px;
+            max-width:1100px;
+            .grid__card{
+                max-width: 350px;
+            }
         }
         
     }
@@ -27,10 +31,6 @@
     //FOOTER
     .footer__container{
         padding: 0;
-        display: flex;
-        justify-content: center; 
+        display: flex
     }
-
-
-
 }
