Fix buttons in Destop

--- a/_src/assets/scss/layout/_mqueries-desktop.scss
+++ b/_src/assets/scss/layout/_mqueries-desktop.scss
@@ -2,6 +2,7 @@
     .main-title{
         font-size: 100px;
         line-height: 132px;
+        margin-top: 300px;
     }
     //BLOG
 
@@ -13,6 +14,7 @@
         left:50%;
         transform: translateX(-50%);
     }
+    
 
     //GRID
 
