--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,5 +1,5 @@
 <div class="footer__container">
-    <button class="link-to-top" type="button"><a href="#top"><img src="assets/images/ico-arrow.svg" alt="arrow-top"></a></button>
+    <button class="link-to-top" type="button"><a href="#top"><img src="../images/ico-arrow.svg" alt="arrow-top"></a></button>
     <div class="footer__wrapper">
         <ul class="footer__nav">
             <li class="footer__link"><a href="#">Article</a></li>
