--- a/_src/assets/scss/layout/_mqueries-tablet.scss
+++ b/_src/assets/scss/layout/_mqueries-tablet.scss
@@ -9,10 +9,15 @@
         font-size:80px;
         line-height:106px;
         max-width:690px;
+        margin-top:384px;
     }
     .title__comment{
         font-size:24px;
         max-width:690px;
+        
+    }
+    .scroll--down{
+        margin-top:30px;
     }
     // BLOG
 
