--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -17,7 +17,7 @@
 
     <div class="hero__image">
       
-      <h1 class="main-title">MIAAAAU Proxy</h1>
+      <h1 class="main-title">Anonymous proxy</h1>
       
       <h2 class="title__comment">In hac habitasse platea dictumst.</h2>
       <button class="scroll--down" type="button">
