--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header__container" id="top"role="heading">
-    <nav class="nav__menu-container">
+    <nav class="nav__menu-container menu-button">
        <button class="menu-button">
           <img src="assets/images/ico-menu.svg" alt="menu-icon">
         </button>
