--- a/_src/assets/scss/layout/_hero.scss
+++ b/_src/assets/scss/layout/_hero.scss
@@ -1,7 +1,16 @@
 .menu-button{
     position:fixed;
     z-index: 5;
-    }
+    animation-name: fade-out;
+    animation-duration:2s;
+    animation-iteration-count:infinite;
+    animation-timing-function: ease;
+        @keyframes fade-out {
+            0%{opacity:0}
+            50%{opacity:1}
+            100%{opacity:0}
+        }
+}
 
 
 .hero__image {
