--- a/_src/assets/scss/layout/_mqueries-desktop.scss
+++ b/_src/assets/scss/layout/_mqueries-desktop.scss
@@ -14,6 +14,9 @@
         left:50%;
         transform: translateX(-50%);
     }
+    .blog-article__link{
+        width:160px;
+    }   
     
 
     //GRID
