Improvement with Carlos

--- a/_src/templates/partials/_blog.html
+++ b/_src/templates/partials/_blog.html
@@ -2,5 +2,5 @@
     <p class="blog__topic">Insomnia Tips</p>
     <h3 class="blog__title">Looking through a window</h3>
     <p class="blog__abstract">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
-    <button type="button" class="blog-article__link"><a href="#" target="#">Go</a></button>
+    <button type="button" class="grid__button"><a href="#" target="#">Go</a></button>
 </div>
