--- a/_src/assets/scss/layout/_mqueries-tablet.scss
+++ b/_src/assets/scss/layout/_mqueries-tablet.scss
@@ -18,12 +18,23 @@
     }
     .scroll--down{
         margin-top:30px;
+        display:block;
     }
     // BLOG
 
     .blog__container{
         margin: 30px 0 60px;
         padding:0 39px;
+    
+        .blog__abstract{
+        margin-bottom: 30px;
+    }
+
+        .blog__title{
+            order: -1;
+        }
+        
+        
     }
 
     // GRID
